--- a/ChatClient/Resources/PasswordBox.xaml
+++ b/ChatClient/Resources/PasswordBox.xaml
@@ -39,6 +39,7 @@
     <Style x:Key="passwordField" TargetType="{x:Type additionalViews:BindablePasswordBox}">
         <Setter Property="FontSize" Value="22"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderBrush" Value="White"/>
         <Setter Property="Background" Value="#E5E7E9"/>
         <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}"/>
     </Style>
