--- a/ChatClient/Resources/TextBlock.xaml
+++ b/ChatClient/Resources/TextBlock.xaml
@@ -24,14 +24,17 @@
     </Style>
 
     <Style x:Key="mainTitle" TargetType="{x:Type TextBlock}">
-        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="FontSize" Value="36"/>
+        <Setter Property="Margin" Value="20,10,20,10"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
     </Style>
 
     <Style x:Key="formText" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource mainTitle}">
         <Setter Property="FontSize" Value="20"/>
-        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="Margin" Value="20,0,20,0"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
     </Style>
 
 </ResourceDictionary>
