--- a/ChatClient/Resources/TextBox.xaml
+++ b/ChatClient/Resources/TextBox.xaml
@@ -9,11 +9,12 @@
 
     <Style x:Key="enterField" TargetType="{x:Type TextBox}">
         <Setter Property="FontSize" Value="22"/>
-        <Setter Property="Margin" Value="10"/>
-        <Setter Property="Width" Value="220"/>
+        <Setter Property="Margin" Value="10,0,10,0"/>
+        <Setter Property="Width" Value="310"/>
+        <Setter Property="Height" Value="35"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Background" Value="#E5E7E9"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
