--- a/ChatClient/Views/AdditionalViews/BindablePasswordBoxConfirm.xaml
+++ b/ChatClient/Views/AdditionalViews/BindablePasswordBoxConfirm.xaml
@@ -8,5 +8,6 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <PasswordBox x:Name="passwordBoxConfirm" 
                  PasswordChanged="PasswordBoxConfirm_PasswordChanged"
+                 BorderThickness="0"
 />
 </UserControl>
