--- a/ChatClient/Views/RegistrationView.xaml
+++ b/ChatClient/Views/RegistrationView.xaml
@@ -9,16 +9,8 @@
              xmlns:validators="clr-namespace:ChatClient.Validators" 
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="800"
-             Loaded="pwBoxPassword_PasswordChanged">
-    <Border BorderThickness="1"
-            BorderBrush="#C0C8D5"
-            CornerRadius="5"
-            Padding="1"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center">
-        <Border.Effect>
-            <DropShadowEffect ShadowDepth="0" BlurRadius="2"/>
-        </Border.Effect>
+             Loaded="registrationField_TextOrPasswordChanged">
+    <Border Style="{StaticResource outerBorder}">
         <Grid Background="#4E535B">
             <Border x:Name="fullRegistrationBorder" Style="{StaticResource formBorder}"
                     Width="365"
@@ -26,10 +18,6 @@
                 <Grid Width="{Binding Path=Width,ElementName=fullRegistrationBorder}"
                       Height="{Binding Path=Height,ElementName=fullRegistrationBorder}"
                     Background="#F1F2F4">
-                    <!--<Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition Width="1.3*"/>
-                    </Grid.ColumnDefinitions>-->
                     <Grid.RowDefinitions>
                         <RowDefinition/>
                         <RowDefinition/>
@@ -37,7 +25,7 @@
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
-                        <RowDefinition/>
+                        <RowDefinition Height="0.9*"/>
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Row="0"  
                            Text="Create account" 
@@ -48,7 +36,8 @@
                                Style="{StaticResource formText}"/>
                         <TextBox Style="{StaticResource enterField}"
                                  Grid.Row="1" Grid.Column="1"
-                             x:Name="txtUsername">
+                             x:Name="txtUsername"
+                                TextChanged="registrationField_TextOrPasswordChanged">
                             <TextBox.Text>
                                 <Binding Path="Username" 
                                      UpdateSourceTrigger="PropertyChanged">
@@ -64,11 +53,12 @@
                                Text="*Email"  
                                Style="{StaticResource formText}"/>
                         <TextBox Style="{StaticResource enterField}"
-                                 Grid.Row="2" Grid.Column="2">
+                                 Grid.Row="2" Grid.Column="2"
+                                 x:Name="txtEmail"
+                                 TextChanged="registrationField_TextOrPasswordChanged">
                             <TextBox.Text>
                                 <Binding Path="Email" 
-                                     UpdateSourceTrigger="PropertyChanged"
-                                     x:Name="txtEmail">
+                                     UpdateSourceTrigger="PropertyChanged">
                                     <Binding.ValidationRules>
                                         <validators:EmailValidator/>
                                     </Binding.ValidationRules>
@@ -86,7 +76,7 @@
                             <additionalViews:BindablePasswordBox 
                         Style="{StaticResource passwordField}"
                             x:Name="pwBoxPassword"
-                            PasswordBox.PasswordChanged="pwBoxPassword_PasswordChanged">
+                            PasswordBox.PasswordChanged="registrationField_TextOrPasswordChanged">
                                 <additionalViews:BindablePasswordBox.Password>
                                     <Binding Path="Password"
                                          ValidatesOnDataErrors="True">
@@ -108,7 +98,7 @@
                             <additionalViews:BindablePasswordBoxConfirm 
                             Style="{StaticResource passwordConfirmField}"
                             x:Name="pwBoxPasswordConfirm"
-                            PasswordBox.PasswordChanged="pwBoxPassword_PasswordChanged">
+                            PasswordBox.PasswordChanged="registrationField_TextOrPasswordChanged">
                                 <additionalViews:BindablePasswordBoxConfirm.PasswordConfirm>
                                     <Binding Path="PasswordConfirm" 
                                          ValidatesOnDataErrors="True">
@@ -129,7 +119,8 @@
 
                     <Button  Content="Back to login" 
                                  Grid.Row="6"
-                                 Margin="10,0,10,20"
+                                 Margin="10,0,10,0"
+                             VerticalAlignment="Top"
                                  Style="{StaticResource submitButton}"
                                  Command="{Binding NavigateLoginCommand}"/>
 
