--- a/ChatClient/Views/LoginView.xaml
+++ b/ChatClient/Views/LoginView.xaml
@@ -15,15 +15,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Border BorderThickness="1"
-            BorderBrush="#C0C8D5"
-            CornerRadius="5"
-            Padding="1"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center">
-        <Border.Effect>
-            <DropShadowEffect ShadowDepth="0" BlurRadius="2"/>
-        </Border.Effect>
+    <Border Style="{StaticResource outerBorder}">
         <Grid Background="#4E535B">
             <Border Style="{StaticResource formBorder}" >
                 <StackPanel Width="350"
@@ -32,36 +24,24 @@
                     <TextBlock Text="Log in" 
                                Style="{StaticResource mainTitle}"/>
                     <TextBlock Text="Username:" 
-                           Margin="10" 
-                           HorizontalAlignment="Center"
-                           FontSize="20"/>
-                    <Border Style="{StaticResource field}" Height="40">
-                        <TextBox FontSize="22"
+                               Style="{StaticResource formText}"/>
+                    <TextBox
                       Text="{Binding Username}"
                                  Style="{StaticResource enterField}"/>
-                    </Border>
-
-                    <Border Style="{StaticResource field}" 
-                        Background="#B2ECE6">
-                        <Button  Content="Login" 
-                             BorderThickness="0"
-                             Background="#B2ECE6"
-                                 FontSize="24"
-                                 VerticalAlignment="Center"
+                    <!--<TextBlock Text="Password:" 
+                               Style="{StaticResource formText}"/>
+                    <TextBox 
+                      Text="{Binding Username}"
+                                 Style="{StaticResource enterField}"/>-->
+                    <Button  Content="Login" 
+                             Style="{StaticResource submitButton}"
+                             Margin="10,20,10,20"
                      Command="{Binding LoginCommand}"/>
-                    </Border>
 
-                    <Border Style="{StaticResource field}" 
-                        Background="#B2ECE6">
-                        <Button  Content="Create new account" 
-                             BorderThickness="0"
-                             Background="#B2ECE6"
-                         Height="40"
-                                 FontSize="24"
-                                 VerticalAlignment="Center"
+                    <Button  Content="Create new account" 
+                             Style="{StaticResource submitButton}"
                      Command="{Binding NavigateRegistrationCommand}"/>
-                    </Border>
-
+                    
                     <!--<TextBlock Style="{StaticResource errorMessage}"
                        Text="{Binding ErrorMessage}"
                        Margin="10"
