--- a/ChatClient/Resources/Border.xaml
+++ b/ChatClient/Resources/Border.xaml
@@ -1,5 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <LinearGradientBrush x:Key="chatTitleColors" StartPoint="0.5,0" EndPoint="0.5,1">
+        <GradientStop Color="#F4D585" Offset="0"/>
+        <GradientStop Color="#FDE29C" Offset="1"/>
+    </LinearGradientBrush>
+
     <Style x:Key="formBorder" TargetType="{x:Type Border}">
         <Setter Property="Width" Value="350"/>
         <Setter Property="Height" Value="350"/>
@@ -20,7 +26,8 @@
     </Style>
 
     <Style x:Key="chatBorder" TargetType="{x:Type Border}">
-        <Setter Property="BorderBrush" Value="#7B828E"/>
+        <Setter Property="BorderBrush" Value="#C2AD35"/>
+        <Setter Property="Background" Value="{StaticResource chatTitleColors}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="CornerRadius" Value="5"/>
     </Style>
