--- a/ChatClient/Resources/Button.xaml
+++ b/ChatClient/Resources/Button.xaml
@@ -1,19 +1,19 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="sendMessage" TargetType="{x:Type Button}">
-        <Setter Property="Content" Value="Send"/>
-        <Setter Property="FontSize" Value="24"/>
-        <Setter Property="Margin" Value="5"/>
-    </Style>
-
+    
     <LinearGradientBrush x:Key="registrationBasicColors" StartPoint="0.5,0" EndPoint="0.5,1">
         <GradientStop Color="#F4DA99" Offset="0"/>
         <GradientStop Color="#DEB13F" Offset="1"/>
     </LinearGradientBrush>
     
     <LinearGradientBrush x:Key="registrationMouseOverColors" StartPoint="0.5,0" EndPoint="0.5,1">
-        <GradientStop Color="#E4BD5C" Offset="0"/>
-        <GradientStop Color="#D9A41F" Offset="1"/>
+        <GradientStop Color="#EBC975" Offset="0"/>
+        <GradientStop Color="#D59C0C" Offset="1"/>
+    </LinearGradientBrush>
+
+    <LinearGradientBrush x:Key="registrationIsPressedColors" StartPoint="0.5,0" EndPoint="0.5,1">
+        <GradientStop Color="#F3E6BC" Offset="0"/>
+        <GradientStop Color="#DFB95B" Offset="1"/>
     </LinearGradientBrush>
 
     <LinearGradientBrush x:Key="registrationIsDisabledColors" StartPoint="0.5,0" EndPoint="0.5,1">
@@ -30,14 +30,17 @@
         <Setter Property="Width" Value="310"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border x:Name="insideBorder" BorderBrush="#6D4F02" Background="{StaticResource registrationBasicColors}" 
                             BorderThickness="1.3" 
-                            CornerRadius="5">
-                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
-                                          VerticalAlignment="{TemplateBinding VerticalAlignment}"/>
+                            CornerRadius="5"
+                            Margin="{TemplateBinding Padding}">
+                        <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -45,6 +48,9 @@
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter TargetName="insideBorder" Property="Background" Value="{StaticResource registrationIsDisabledColors}"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="insideBorder" Property="Background" Value="{StaticResource registrationIsPressedColors}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -79,4 +85,15 @@
             </MultiDataTrigger>
         </Style.Triggers>
     </Style>
+
+    <Style x:Key="sendMessage" TargetType="{x:Type Button}" BasedOn="{StaticResource submitButton}">
+        <Setter Property="Content" Value="Send"/>
+        <Setter Property="FontSize" Value="28"/>
+        <Setter Property="Margin" Value="0,5,5,5"/>
+        <Setter Property="Width" Value="Auto"/>
+        <Setter Property="Height" Value="Auto"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
+    </Style>
+
 </ResourceDictionary>
