--- a/ChatClient/Resources/Grid.xaml
+++ b/ChatClient/Resources/Grid.xaml
@@ -1,5 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <LinearGradientBrush x:Key="typeMessageGridColors" StartPoint="0.5,0" EndPoint="0.5,1">
+        <GradientStop Color="#D9D9DC" Offset="0"/>
+        <GradientStop Color="#CCCCD7" Offset="0.5"/>
+        <GradientStop Color="#BCBCC5" Offset="1"/>
+    </LinearGradientBrush>
+    
     <Style x:Key="getBannedLayout" TargetType="{x:Type Grid}">
         <Setter Property="Opacity" Value="0.5"/>
         <Setter Property="Panel.ZIndex" Value="2"/>
