--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -2,10 +2,20 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ChatClient.Models">
 
+    <LinearGradientBrush x:Key="mainMessageBoxColors" StartPoint="0.5,0" EndPoint="0.5,1">
+        <GradientStop Color="#E6E7FF" Offset="0"/>
+        <GradientStop Color="#F0F0FF" Offset="0.2"/>
+        <GradientStop Color="#F0F0FF" Offset="0.4"/>
+        <GradientStop Color="#F0F0FF" Offset="0.6"/>
+        <GradientStop Color="#F0F0FF" Offset="0.8"/>
+        <GradientStop Color="#E6E7FF" Offset="1"/>
+    </LinearGradientBrush>
+
     <Style x:Key="activeUsers" x:Name="usersListBox" TargetType="{x:Type ListBox}">
         <Setter Property="ItemsSource" Value="{Binding ActiveUsers}"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+        <Setter Property="Background" Value="{StaticResource mainMessageBoxColors}"/>
         <Setter Property="ContextMenu">
             <Setter.Value>
                 <ContextMenu ItemsSource="{Binding ContextMenuActions}">
