--- a/ChatClient/Resources/PasswordBox.xaml
+++ b/ChatClient/Resources/PasswordBox.xaml
@@ -40,14 +40,14 @@
         <Setter Property="FontSize" Value="22"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="BorderBrush" Value="White"/>
-        <Setter Property="Background" Value="#E5E7E9"/>
+        <Setter Property="Background" Value="#F9F9F9"/>
         <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}"/>
     </Style>
 
     <Style x:Key="passwordConfirmField"  TargetType="{x:Type additionalViews:BindablePasswordBoxConfirm}">
         <Setter Property="FontSize" Value="22"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Background" Value="#E5E7E9"/>
+        <Setter Property="Background" Value="#F9F9F9"/>
         <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}"/>
     </Style>
 </ResourceDictionary>
