--- a/ChatClient/Resources/TextBox.xaml
+++ b/ChatClient/Resources/TextBox.xaml
@@ -1,19 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="typeMessage" TargetType="{x:Type TextBox}">
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="5"/>
-        <Setter Property="Height" Value="40"/>
-    </Style>
-
     <Style x:Key="enterField" TargetType="{x:Type TextBox}">
         <Setter Property="FontSize" Value="22"/>
         <Setter Property="Margin" Value="10,0,10,0"/>
         <Setter Property="Width" Value="310"/>
         <Setter Property="Height" Value="35"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Background" Value="#E5E7E9"/>
+        <Setter Property="Background" Value="#F9F9F9"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -21,7 +15,8 @@
                     <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="5">
                         <TextBox Margin="1" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Text, UpdateSourceTrigger=PropertyChanged}" 
                                  BorderThickness="0"
-                                 VerticalContentAlignment="Center"/>
+                                 VerticalContentAlignment="Center"
+                                 Background="{TemplateBinding Background}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -62,5 +57,14 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style x:Key="typeMessage" TargetType="{x:Type TextBox}" BasedOn="{StaticResource enterField}">
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Width" Value="Auto"/>
+        <Setter Property="Height" Value="Auto"/>
+        <Setter Property="Background" Value="#F9F9F9"/>
     </Style>
 </ResourceDictionary>
