--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ChatClient.Models">
+                    xmlns:local="clr-namespace:ChatClient.Models"
+                    xmlns:converters="clr-namespace:ChatClient.Converters">
+
+    <converters:MessageLineNormalizeConverter x:Key="normalizedMessage"/>
 
     <LinearGradientBrush x:Key="mainMessageBoxColors" StartPoint="0.5,0" EndPoint="0.5,1">
         <GradientStop Color="#E6E7FF" Offset="0"/>
@@ -54,6 +57,45 @@
                                        Foreground="#5F5C5A"
                                        FontSize="16"
                                        FontWeight="SemiBold"/>
+                        </StackPanel>
+                    </StackPanel>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="messagesListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource activeUsers}">
+        <Setter Property="ItemsSource" Value="{Binding Messages}"/>
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Border CornerRadius="25" 
+                                    Background="CornflowerBlue" 
+                                    Width="30" 
+                                    Height="30"/>
+                        <StackPanel Width="400">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Path=UserInfo.Username}"
+                                       Foreground="{Binding Path=UserInfo.UsernameColor}"
+                                       Margin="10,0,5,0"
+                                       FontSize="18"/>
+                                <TextBlock Text="{Binding Path=Time}"
+                                           FontSize="11"
+                                           Margin="0,6,0,0"
+                                           Foreground="#848484"
+                                           FontWeight="SemiBold"/>
+                            </StackPanel>
+                            <TextBlock Text="{Binding Message}"
+                                       x:Name="message"
+                                   Margin="10,-5,0,0"
+                                       Foreground="Black"
+                                       FontSize="20"
+                                       MaxWidth="{Binding RelativeSource={RelativeSource AncestorType={x:Type Grid}}, Path=ActualWidth
+                                                , Converter={StaticResource normalizedMessage}}"
+                                       TextWrapping="Wrap"
+                                       HorizontalAlignment="Left"/>
                         </StackPanel>
                     </StackPanel>
                 </DataTemplate>
