--- a/ChatClient/Views/ChatView.xaml
+++ b/ChatClient/Views/ChatView.xaml
@@ -28,9 +28,9 @@
                            Text="Chat"/>
             </Border>
 
-            <ListBox Grid.Row="1"  
-                     ItemsSource="{Binding Messages}"
-                     Background="{StaticResource mainMessageBoxColors}"/>
+            <Grid Grid.Row="1">
+                <ListBox Style="{StaticResource messagesListBox}"/>
+            </Grid>
 
             <Grid Grid.Row="2"
                   Background="{StaticResource typeMessageGridColors}">
