Messages auto scrolling was implemented

--- a/ChatClient/Resources/TextBox.xaml
+++ b/ChatClient/Resources/TextBox.xaml
@@ -16,6 +16,7 @@
                         <TextBox Margin="1" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Text, UpdateSourceTrigger=PropertyChanged}" 
                                  BorderThickness="0"
                                  VerticalContentAlignment="Center"
+                                 TextWrapping="Wrap"
                                  Background="{TemplateBinding Background}"/>
                     </Border>
                 </ControlTemplate>
