--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ChatClient.Models"
-                    xmlns:converters="clr-namespace:ChatClient.Converters">
+                    xmlns:converters="clr-namespace:ChatClient.Converters"
+                    xmlns:extensions="clr-namespace:ChatClient.Extensions">
 
     <converters:MessageLineNormalizeConverter x:Key="normalizedMessage"/>
 
@@ -18,7 +19,6 @@
         <Setter Property="ItemsSource" Value="{Binding ActiveUsers}"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-        <Setter Property="Background" Value="{StaticResource mainMessageBoxColors}"/>
         <!--<Setter Property="ContextMenu">
             <Setter.Value>
                 <ContextMenu ItemsSource="{Binding ContextMenuActions}">
@@ -38,6 +38,17 @@
                 </ContextMenu>
             </Setter.Value>
         </Setter>-->
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <ScrollViewer extensions:ScrollViewerExtension.AlwaysScrollToEnd="True">
+                        <Grid Background="{StaticResource mainMessageBoxColors}">
+                            <ItemsPresenter/>
+                        </Grid>
+                    </ScrollViewer>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
         <Setter Property="ItemTemplate">
             <Setter.Value>
                 <DataTemplate>
@@ -92,7 +103,7 @@
                                    Margin="10,-5,0,0"
                                        Foreground="Black"
                                        FontSize="20"
-                                       MaxWidth="{Binding RelativeSource={RelativeSource AncestorType={x:Type Grid}}, Path=ActualWidth
+                                       MaxWidth="{Binding RelativeSource={RelativeSource AncestorType={x:Type ScrollViewer}}, Path=ActualWidth
                                                 , Converter={StaticResource normalizedMessage}}"
                                        TextWrapping="Wrap"
                                        HorizontalAlignment="Left"/>
