Authorization server connection was validated

--- a/ChatClient/App.xaml
+++ b/ChatClient/App.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary Source="Resources/Grid.xaml"/>
                 <ResourceDictionary Source="Resources/Border.xaml"/>
                 <ResourceDictionary Source="Resources/PasswordBox.xaml"/>
+                <ResourceDictionary Source="Resources/ContentControl.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
